SFDC-Twillio-Integration/force-app/main/default/objects/Twilio_Message__c/Twilio_Message__c.object-meta.xml
<CustomObject>
    <label>Twilio Message</label>
    <nameField>
        <displayFormat>SMS-{0}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Twilio Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>