SFDC-Twillio-Integration/force-app/main/default/objects/Twilio_Message__c/fields/Error_comments__c.field-meta.xml
<CustomField>
    <fullName>Error_comments__c</fullName>
    <description>if there&apos;s an error, here are the details</description>
    <inlineHelpText>if there&apos;s an error, here are the details</inlineHelpText>
    <label>Error comments</label>
    <type>TextArea</type>
</CustomField>