SFDC-Twillio-Integration/force-app/main/default/objects/Twilio_Message__c/fields/Message_Body__c.field-meta.xml
<CustomField>
    <fullName>Message_Body__c</fullName>
    <label>Message Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>